examples/test/testpolicy16987.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16987
  namespace: namespace252
spec:
  podSelector:
    matchLabels:
      key43: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value25
      podSelector:
        matchLabels:
          key25: value44
          key15: value44
          key16: value25
